--- a/index.html
+++ b/index.html
@@ -8,45 +8,97 @@
 	<title>A digital boy - Alejandro Aboy</title>
 
 	<script src="js/fonts.js"></script>
-
-	<link rel="stylesheet" href="css/main.css">
+	
 	<link rel="stylesheet" href="css/typography.css">
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/components.css">
 
 </head>
 <body>
 
 <section class="hero">
 	<div class="container">
-		<h1>A digital boy</h1>
-		<h2>Publicidad Digital. Contenido Digital. Estrategia Digital. En fin, digital.</h2>
+		<h1 class="hero__title">A digital boy</h1>
+		<h2 class="hero__sub">Publicidad Digital. Contenido Digital. <br> Estrategia Digital. En fin, digital.</h2>
+		<ul class="skills">
+			<li><img src="images/skills/analytics.png" alt="Google Analytics"></li>
+			<li><img src="images/skills/shopify.png" alt="Shopify"></li>
+			<li><img src="images/skills/ads.png" alt="Google Ads"></li>
+			<li><img src="images/skills/mailchimp.png" alt="Mailchimp"></li>
+			<li><img src="images/skills/fb.png" alt="Facebook"></li>
+			<li><img src="images/skills/instagram.png" alt="Instagram"></li>
+		</ul>
 	</div>
 </section>
 	
 <section class="border intro">
 	<div class="container">
-		<h3>1) Un gusto.</h3>
-		<p>Estudiante de Comunicación Publicitaria. Fanático del Marketing Digital. Para algunos soy Analista de Marketing y para otros soy "el que te hace esperar 5 segundos antes de ver tus bloopers de gatitos en Youtube”.</p>
+		<article class="border__content">
+			<img src="images/profile.jpg" alt="Alejandro Aboy">
+		</article>
+		<article class="border__text">
+			<h3 class="border__title">1) Un gusto.</h3>
+			<p class="border__sub">Estudiante de Comunicación Publicitaria. Fanático del Marketing Digital. Para algunos soy Analista de Marketing y para otros soy "el que te hace esperar 5 segundos antes de ver tus bloopers de gatitos en Youtube”.</p>
+		</article>
 	</div>
 </section>
 
-<section class="border">
+<section class="border trabajos">
 	<div class="container">
-		<h3>2) Trabajos</h3>
-		<p>Pienso y aprendo cada vez más sobre Google Ads, Facebook Ads, Analytics, Ecommerce, Contenidos. Y si tengo que pensar y aprender para cosas que todavía no sé; mejor.</p>
+		<article class="border__text">
+			<h3 class="border__title">2) Trabajos</h3>
+			<p class="border__sub">Pienso y aprendo cada vez más sobre Google Ads, Facebook Ads, Analytics, Ecommerce, Contenidos. Y si tengo que pensar y aprender para cosas que todavía no sé; mejor.</p>
+		</article>
+		<article class="border__content">
+			<a href="" class="linkbox">
+				<h4 class="linkbox__title">MRU</h4>
+				<p class="linkbox__sub">Una marca que buscaba subir el ROI para movilizar al 100% su Shopify. Te revelo las estrategias mediante las cuales aumente el ROI en tan sólo 7 días. Vamo!</p>
+			</a>
+			<a href="" class="linkbox">
+				<h4 class="linkbox__title">Vitroblock</h4>
+				<p class="linkbox__sub">¿Alguna vez un CTR de una marca no tan conocida fue tan alto? SÍ. Recomiendo leer de izquierda a derecha!</p>
+			</a>
+			<a href="" class="linkbox">
+				<h4 class="linkbox__title">Enchufarte</h4>
+				<p class="linkbox__sub">De perder inversión a ganar casi el triple en 60 días. Si fuese un hit estaría en todas las radios. Dale Play!</p>
+			</a>
+		</article>
 	</div>
 </section>
 
-<section class="border">
+<section class="border blog">
 	<div class="container">
-		<h3>3) Blog. Contenidos. Esas cosas.</h3>
-		<p>¡Pum! Artículos. Puedo contar lo que sea del día a día digital, siempre hay que reinventarse. Lo que vaya descubriendo puede ser útil para muchos, más cuando es gratis.</p>
+		<article class="border__text">
+			<h3 class="border__title">3) Blog. Contenidos. Esas cosas.</h3>
+			<p class="border__sub">¡Pum! Artículos. Puedo contar lo que sea del día a día digital, siempre hay que reinventarse. Lo que vaya descubriendo puede ser útil para muchos, más cuando es gratis.</p>
+		</article>
+		<article class="border__content">
+			<a href="" class="linkbox">
+				<p class="linkbox__sub">Jan 27 - 5 min read</p>
+				<h4 class="linkbox__title">Agencia vs Cliente: ¿Quien tiene la última palabra?</h4>
+			</a>
+			<a href="" class="linkbox">
+				<p class="linkbox__sub">Jan 27 - 6 min read</p>
+				<h4 class="linkbox__title">¿Desde que momento somos Consultores en Marketing Digital?</h4>
+			</a>
+		</article>
 	</div>
 </section>
 
-<section class="band light-blue">
+<section class="band light-blue contacto">
 	<div class="container">
-		<h3>4) Charlemos cuando quieras. (Salvo que envíes audios de más de 3 minutos, por favor eso no.)</h3>
-		<p>Me encanta empezar reuniones con clientes y que me digan frases como: “¡Wow, 21 años! ¿Vas a poder con este proyecto?” Así empiezan grandes procesos.</p>
+		<article class="border__text">
+			<h3 class="border__title">4) Charlemos cuando quieras. (Salvo que envíes audios de más de 3 minutos, por favor eso no.)</h3>
+			<p class="border__sub">Me encanta empezar reuniones con clientes y que me digan frases como: “¡Wow, 21 años! ¿Vas a poder con este proyecto?” Así empiezan grandes procesos.</p>
+		</article>
+		<article class="border__content">
+			<ul class="contactoinfo">
+				<li><a href="" target="_blank">Email</a></li>
+				<li><a href="" target="_blank">Instagram</a></li>
+				<li><a href="" target="_blank">Medium</a></li>
+				<li><a href="" target="_blank">Youtube</a></li>
+			</ul>
+		</article>
 	</div>
 </section>
 
