--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <section class="border intro">
 	<div class="container">
 		<article class="border__content">
-			<img src="images/profile.jpg" alt="Alejandro Aboy">
+			<img src="images/alejandroaboy.jpg" alt="Alejandro Aboy">
 		</article>
 		<article class="border__text">
 			<h3 class="border__title">1) Un gusto.</h3>
