--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<img src="images/alejandroaboy.jpg" alt="Alejandro Aboy">
 		</article>
 		<article class="border__text">
-			<h3 class="border__title">1) Un gusto.</h3>
+			<h3 class="border__title">Un gusto.</h3>
 			<p class="border__sub">Estudiante de Comunicación Publicitaria. Fanático del Marketing Digital. Para algunos soy Analista de Marketing y para otros soy "el que te hace esperar 5 segundos antes de ver tus bloopers de gatitos en Youtube”.</p>
 		</article>
 	</div>
@@ -46,7 +46,7 @@
 <section class="border trabajos">
 	<div class="container">
 		<article class="border__text">
-			<h3 class="border__title">2) Trabajos</h3>
+			<h3 class="border__title">Trabajos</h3>
 			<p class="border__sub">Pienso y aprendo cada vez más sobre Google Ads, Facebook Ads, Analytics, Ecommerce, Contenidos. Y si tengo que pensar y aprender para cosas que todavía no sé; mejor.</p>
 		</article>
 		<article class="border__content">
@@ -69,7 +69,7 @@
 <section class="border blog">
 	<div class="container">
 		<article class="border__text">
-			<h3 class="border__title">3) Blog. Contenidos. Esas cosas.</h3>
+			<h3 class="border__title">Blog. Contenidos. Esas cosas.</h3>
 			<p class="border__sub">¡Pum! Artículos. Puedo contar lo que sea del día a día digital, siempre hay que reinventarse. Lo que vaya descubriendo puede ser útil para muchos, más cuando es gratis.</p>
 		</article>
 		<article class="border__content">
@@ -88,7 +88,7 @@
 <section class="band light-blue contacto">
 	<div class="container">
 		<article class="border__text">
-			<h3 class="border__title">4) Charlemos cuando quieras. (Salvo que envíes audios de más de 3 minutos, por favor eso no.)</h3>
+			<h3 class="border__title">Charlemos cuando quieras. (Salvo que envíes audios de más de 3 minutos, por favor eso no.)</h3>
 			<p class="border__sub">Me encanta empezar reuniones con clientes y que me digan frases como: “¡Wow, 21 años! ¿Vas a poder con este proyecto?” Así empiezan grandes procesos.</p>
 		</article>
 		<article class="border__content">
