Anim texto hero

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <section class="hero">
 	<div class="container">
-		<h1 class="hero__title">A digital boy</h1>
+		<h1 class="hero__title" id="titleAnim"></h1>
 		<h2 class="hero__sub">Publicidad Digital. Contenido Digital. <br> Estrategia Digital. En fin, digital.</h2>
 		<ul class="skills">
 			<li><img src="images/skills/analytics.png" alt="Google Analytics"></li>
@@ -108,6 +108,7 @@
 	</div>
 </footer>
 
+<script src="js/main.js"></script>
 
 </body>
 </html>
