Links updates and animations

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 
 <section class="hero">
 	<div class="container">
-		<h1 class="hero__title" id="titleAnim"></h1>
+		<h1 class="hero__title anim" id="titleAnim"></h1>
 		<h2 class="hero__sub">Publicidad Digital. Contenido Digital. <br> Estrategia Digital. En fin, digital.</h2>
 		<ul class="skills">
-			<li><img src="images/skills/analytics.png" alt="Google Analytics"></li>
-			<li><img src="images/skills/shopify.png" alt="Shopify"></li>
-			<li><img src="images/skills/ads.png" alt="Google Ads"></li>
-			<li><img src="images/skills/mailchimp.png" alt="Mailchimp"></li>
-			<li><img src="images/skills/fb.png" alt="Facebook"></li>
-			<li><img src="images/skills/instagram.png" alt="Instagram"></li>
+			<li><img src="images/skills/analytics.svg" alt="Google Analytics"></li>
+			<li><img src="images/skills/shopify.svg" alt="Shopify"></li>
+			<li><img src="images/skills/ads.svg" alt="Google Ads"></li>
+			<li><img src="images/skills/mailchimp.svg" alt="Mailchimp"></li>
+			<li><img src="images/skills/fb.svg" alt="Facebook"></li>
+			<li><img src="images/skills/instagram.svg" alt="Instagram"></li>
 		</ul>
 	</div>
 </section>
@@ -37,28 +37,29 @@
 			<img src="images/alejandroaboy.jpg" alt="Alejandro Aboy">
 		</article>
 		<article class="border__text">
-			<h3 class="border__title">Un gusto.</h3>
+			<h3 class="border__title anim" id="introAnim"></h3>
 			<p class="border__sub">Estudiante de Comunicación Publicitaria. Fanático del Marketing Digital. Para algunos soy Analista de Marketing y para otros soy "el que te hace esperar 5 segundos antes de ver tus bloopers de gatitos en Youtube”.</p>
 		</article>
+		<a href="files/cv.pdf" target="_blank" class="border__btn">Ver CV</a>
 	</div>
 </section>
 
 <section class="border trabajos">
 	<div class="container">
 		<article class="border__text">
-			<h3 class="border__title">Trabajos</h3>
+			<h3 class="border__title anim" id="trabajosAnim"></h3>
 			<p class="border__sub">Pienso y aprendo cada vez más sobre Google Ads, Facebook Ads, Analytics, Ecommerce, Contenidos. Y si tengo que pensar y aprender para cosas que todavía no sé; mejor.</p>
 		</article>
 		<article class="border__content">
-			<a href="" class="linkbox">
+			<a href="https://medium.com/@aboyalejandro/%EF%B8%8Fcomo-sub%C3%AD-de-0-41-a-2-50-de-roi-en-2-meses-vendiendo-productos-baratos-en-mayor-cantidad-cc8622a2de55" target="_blank" class="linkbox">
 				<h4 class="linkbox__title">MRU</h4>
 				<p class="linkbox__sub">Una marca que buscaba subir el ROI para movilizar al 100% su Shopify. Te revelo las estrategias mediante las cuales aumente el ROI en tan sólo 7 días. Vamo!</p>
 			</a>
-			<a href="" class="linkbox">
+			<a href="https://medium.com/@aboyalejandro/te-cuento-como-aumentamos-un-12-de-adquisici%C3%B3n-en-un-mes-a-trav%C3%A9s-en-google-ads-con-la-misma-b7293b82a1dd" target="_blank" class="linkbox">
 				<h4 class="linkbox__title">Vitroblock</h4>
 				<p class="linkbox__sub">¿Alguna vez un CTR de una marca no tan conocida fue tan alto? SÍ. Recomiendo leer de izquierda a derecha!</p>
 			</a>
-			<a href="" class="linkbox">
+			<a href="https://medium.com/@aboyalejandro/te-cuento-como-logr%C3%A9-3-de-roi-en-7-d%C3%ADas-con-facebook-ads-mailchimp-y-plugins-de-shopify-c14f556b066" target="_blank" class="linkbox">
 				<h4 class="linkbox__title">Enchufarte</h4>
 				<p class="linkbox__sub">De perder inversión a ganar casi el triple en 60 días. Si fuese un hit estaría en todas las radios. Dale Play!</p>
 			</a>
@@ -69,34 +70,35 @@
 <section class="border blog">
 	<div class="container">
 		<article class="border__text">
-			<h3 class="border__title">Blog. Contenidos. Esas cosas.</h3>
+			<h3 class="border__title anim" id="blogAnim"></h3>
 			<p class="border__sub">¡Pum! Artículos. Puedo contar lo que sea del día a día digital, siempre hay que reinventarse. Lo que vaya descubriendo puede ser útil para muchos, más cuando es gratis.</p>
 		</article>
 		<article class="border__content">
-			<a href="" class="linkbox">
+			<a href="https://medium.com/weland-agency/agencia-vs-cliente-quien-tiene-la-%C3%BAltima-palabra-16cf571e47a5" target="_blank" class="linkbox">
 				<p class="linkbox__sub">Jan 27 - 5 min read</p>
 				<h4 class="linkbox__title">Agencia vs Cliente: ¿Quien tiene la última palabra?</h4>
 			</a>
-			<a href="" class="linkbox">
+			<a href="https://medium.com/weland-agency/desde-que-momento-somos-consultores-en-marketing-digital-3b94dd047e4f" target="_blank" class="linkbox">
 				<p class="linkbox__sub">Jan 27 - 6 min read</p>
 				<h4 class="linkbox__title">¿Desde que momento somos Consultores en Marketing Digital?</h4>
 			</a>
 		</article>
+		<a href="https://medium.com/@aboyalejandro" target="_blank" class="border__btn">Ver más</a>
 	</div>
 </section>
 
 <section class="band light-blue contacto">
 	<div class="container">
 		<article class="border__text">
-			<h3 class="border__title">Charlemos cuando quieras. (Salvo que envíes audios de más de 3 minutos, por favor eso no.)</h3>
+			<h3 class="border__title anim" id="contactoAnim"></h3>
 			<p class="border__sub">Me encanta empezar reuniones con clientes y que me digan frases como: “¡Wow, 21 años! ¿Vas a poder con este proyecto?” Así empiezan grandes procesos.</p>
 		</article>
 		<article class="border__content">
 			<ul class="contactoinfo">
-				<li><a href="" target="_blank">Email</a></li>
-				<li><a href="" target="_blank">Instagram</a></li>
-				<li><a href="" target="_blank">Medium</a></li>
-				<li><a href="" target="_blank">Youtube</a></li>
+				<li><a href="mailto:aboyalejandro@gmail.com" target="_blank">Email</a></li>
+				<li><a href="https://www.instagram.com/adigitalboy/" target="_blank">Instagram</a></li>
+				<li><a href="https://medium.com/@aboyalejandro" target="_blank">Medium</a></li>
+				<li><a href="https://www.youtube.com/channel/UCajXk7uAIt3Ys_2HyNdicVA" target="_blank">Youtube</a></li>
 			</ul>
 		</article>
 	</div>
