Agrego btn contacto y otros ajustes

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 			<li><img src="images/skills/fb.svg" alt="Facebook"></li>
 			<li><img src="images/skills/instagram.svg" alt="Instagram"></li>
 		</ul>
+		<a href="#contacto" class="border__btn">Contacto</a>
 	</div>
 </section>
 	
@@ -43,6 +44,18 @@
 		<a href="files/cv.pdf" target="_blank" class="border__btn">Ver CV</a>
 	</div>
 </section>
+
+<!-- <section class="border">
+	<div class="container">
+		<article class="border__content">
+			<img src="images/alejandroaboy.jpg" alt="Alejandro Aboy">
+		</article>
+		<article class="border__text">
+			<h3 class="border__title anim" id="welandAnim">Weland</h3>
+			<p class="border__sub">Estudiante de Comunicación Publicitaria. Fanático del Marketing Digital. Para algunos soy Analista de Marketing y para otros soy "el que te hace esperar 5 segundos antes de ver tus bloopers de gatitos en Youtube”.</p>
+		</article>
+	</div>
+</section> -->
 
 <section class="border trabajos">
 	<div class="container">
@@ -87,7 +100,7 @@
 	</div>
 </section>
 
-<section class="band light-blue contacto">
+<section class="band light-blue contacto" id="contacto">
 	<div class="container">
 		<article class="border__text">
 			<h3 class="border__title anim" id="contactoAnim"></h3>
@@ -110,6 +123,7 @@
 	</div>
 </footer>
 
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="js/main.js"></script>
 
 </body>
