--- a/index.html
+++ b/index.html
@@ -45,17 +45,18 @@
 	</div>
 </section>
 
-<!-- <section class="border">
+<section class="border agencia">
 	<div class="container">
 		<article class="border__content">
-			<img src="images/alejandroaboy.jpg" alt="Alejandro Aboy">
+			<img src="images/weland.jpg" alt="Agencia">
 		</article>
 		<article class="border__text">
-			<h3 class="border__title anim" id="welandAnim">Weland</h3>
-			<p class="border__sub">Estudiante de Comunicación Publicitaria. Fanático del Marketing Digital. Para algunos soy Analista de Marketing y para otros soy "el que te hace esperar 5 segundos antes de ver tus bloopers de gatitos en Youtube”.</p>
+			<h3 class="border__title anim" id="agenciaAnim"></h3>
+			<p class="border__sub">No estamos casados con ninguna filosofía ni proceso de trabajo, cada proyecto es un mundo aparte, el tuyo incluido.</p>
 		</article>
+		<a href="https://adigitalboy.com" class="border__btn">¿Qué onda la Agencia?</a>
 	</div>
-</section> -->
+</section>
 
 <section class="border trabajos">
 	<div class="container">
