Saco link youtube en footer

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 				<li><a href="mailto:aboyalejandro@gmail.com" target="_blank">Email</a></li>
 				<li><a href="https://www.instagram.com/adigitalboy/" target="_blank">Instagram</a></li>
 				<li><a href="https://medium.com/@aboyalejandro" target="_blank">Medium</a></li>
-				<li><a href="https://www.youtube.com/channel/UCajXk7uAIt3Ys_2HyNdicVA" target="_blank">Youtube</a></li>
+				<!-- <li><a href="https://www.youtube.com/channel/UCajXk7uAIt3Ys_2HyNdicVA" target="_blank">Youtube</a></li> -->
 			</ul>
 		</article>
 	</div>
