--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/components.css">
 
+	<link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+	<link rel="manifest" href="images/favicon/site.webmanifest">
+	<link rel="mask-icon" href="images/favicon/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#eb657c">
+	<meta name="theme-color" content="#eb657c">
+
 </head>
 <body>
 
@@ -21,12 +29,10 @@
 		<h1 class="hero__title anim" id="titleAnim"></h1>
 		<h2 class="hero__sub">Publicidad Digital. Contenido Digital. <br> Estrategia Digital. En fin, digital.</h2>
 		<ul class="skills">
-			<li><img src="images/skills/analytics.svg" alt="Google Analytics"></li>
+			<li><img src="images/skills/analytics-iso.svg" alt="Google Analytics"></li>
 			<li><img src="images/skills/shopify.svg" alt="Shopify"></li>
 			<li><img src="images/skills/ads.svg" alt="Google Ads"></li>
 			<li><img src="images/skills/mailchimp.svg" alt="Mailchimp"></li>
-			<li><img src="images/skills/fb.svg" alt="Facebook"></li>
-			<li><img src="images/skills/instagram.svg" alt="Instagram"></li>
 		</ul>
 		<a href="#contacto" class="border__btn">Contacto</a>
 	</div>
@@ -35,11 +41,11 @@
 <section class="border intro">
 	<div class="container">
 		<article class="border__content">
-			<img src="images/alejandroaboy.jpg" alt="Alejandro Aboy">
+			<img src="images/alejandroaboy-new.jpg" alt="Alejandro Aboy">
 		</article>
 		<article class="border__text">
 			<h3 class="border__title anim" id="introAnim"></h3>
-			<p class="border__sub">Estudiante de Comunicación Publicitaria. Fanático del Marketing Digital. Para algunos soy Analista de Marketing y para otros soy "el que te hace esperar 5 segundos antes de ver tus bloopers de gatitos en Youtube”.</p>
+			<p class="border__sub">Fanático del Marketing Digital. Para algunos soy Analista de Marketing y para otros soy "el que te hace esperar 5 segundos antes de ver tus bloopers de gatitos en Youtube”.</p>
 		</article>
 		<a href="files/cv.pdf" target="_blank" class="border__btn">Ver CV</a>
 	</div>
@@ -54,7 +60,7 @@
 			<h3 class="border__title anim" id="agenciaAnim"></h3>
 			<p class="border__sub">No estamos casados con ninguna filosofía ni proceso de trabajo, cada proyecto es un mundo aparte, el tuyo incluido.</p>
 		</article>
-		<a href="https://adigitalboy.com" class="border__btn">¿Qué onda la Agencia?</a>
+		<a href="https://thewhoknows.com" class="border__btn" target="_blank">¿Qué onda la Agencia?</a>
 	</div>
 </section>
 
